--- a/404.html
+++ b/404.html
@@ -1,4 +1,5 @@
 ---
+title: Page not found
 permalink: /404.html
 layout: default
 ---
@@ -10,6 +11,6 @@ layout: default
 </style>
 
 <div class="container404">
-    <h1>404</h1>
+    <h1 class="page-title">404</h1>
     <p>Page not found</p>
 </div>
